# netnotes.md

backend/: manage.py  pyproject.toml
backend/netnotes/: asgi.py  settings.py  urls.py  wsgi.py
backend/netnotes/notes/: models.py  serializers.py  urls.py  utils.py  views.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/@modal/(.)create/: page.tsx
frontend/app/@noteTitle/: default.tsx
frontend/app/@noteTitle/notes/[slug]/: page.tsx
frontend/app/create/: page.tsx
frontend/app/notes/[slug]/: page.tsx
frontend/components/: footer.tsx  header.tsx  note-card.tsx  note-content.tsx  notes-list.tsx
frontend/components/ui/: back-btn.tsx  header-title.tsx  new-note.tsx
frontend/lib/notes/: index.ts
frontend/lib/sleep/: index.ts
frontend/types/: index.ts
